fix: fix errors when linting JAVA: add javadoc, fix intention, fix maven wrapper etc